# jubajam-core

./: CMakeCache.txt  CMakeLists.txt  Makefile  ]  cmake_install.cmake  compile_commands.json  gltf.py  rebuild.sh  run-python.sh  run.sh
.cache/clangd/index/: Base64.h.F86865821FF3FD05.idx  _fixes.hpp.512CE2E55FB5F1EA.idx  _fixes.hpp.8ED381AA81DBF8F4.idx  _fixes.hpp.A29D3BCF7FB9C1F2.idx  _fixes.hpp.CC49DB3848AA54ED.idx  _vectorize.hpp.3068E65664F0FE12.idx  _vectorize.hpp.462E9409250D0C1D.idx  _vectorize.hpp.644A56E8755BE94E.idx  _vectorize.hpp.E274C0474FCBA03B.idx  abi_macros.hpp.4F58814514D4A03E.idx  abi_macros.hpp.6CB1CF458C4760E4.idx  adl_serializer.hpp.1A9DA732DB09C84D.idx  adl_serializer.hpp.E45C7D0B11A3D1F2.idx  begin.hpp.4450B24677A464BA.idx  begin.hpp.7ADF13085BC7B9AE.idx  binary_reader.hpp.0831F18509C91C72.idx  binary_reader.hpp.533F2195CF8ED314.idx  binary_writer.hpp.00F27A508A8FEEBD.idx  binary_writer.hpp.650E6D70CB833147.idx  byte_container_with_subtype.hpp.1439588C88EB0EC2.idx  byte_container_with_subtype.hpp.FC9D75B27C29502A.idx  common.hpp.0458ACAD5A136B3D.idx  common.hpp.888DD3AF6066FD60.idx  common.hpp.A20CFA4231877ADC.idx  (+938 more)
assets/futurefemale/: head1.tga  jkm_female1.txt  legs1.tga  torso1.tga
build-cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  jubajam-core
env/: pyvenv.cfg
include/nlohmann/: json_fwd.hpp
src/: core.cpp  core.h  fragment.glsl  h_head  l_legs  main.cpp  parser.cpp  parser.h  tex_id_vert_pairing.json  u_torso  vertex.glsl  vertex_dump  vertex_dump.py
(+2 files in other folders)
